fixed spacing

--- a/wp-content/themes/engage/assets/scss/components/_article.scss
+++ b/wp-content/themes/engage/assets/scss/components/_article.scss
@@ -44,6 +44,12 @@
   grid-row: 1;
   font-weight: 400;
   padding-top: $spacer-sm;
+  padding-bottom: $spacer;
+
+  @include media(700px) {
+    grid-column: 2;
+    padding-bottom: $spacer-xl;
+  }
 
   @include media($tablet) {
     max-width: 100%;
